add updating and leaving spaces
