# ragbag-frontend/src/lib/api/gen/models/UpdateSpaceDto.ts
@@ -1,0 +1,74 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Authentication Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface UpdateSpaceDto
+ */
+export interface UpdateSpaceDto {
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdateSpaceDto
+     */
+    name: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof UpdateSpaceDto
+     */
+    description?: string;
+}
+
+/**
+ * Check if a given object implements the UpdateSpaceDto interface.
+ */
+export function instanceOfUpdateSpaceDto(value: object): value is UpdateSpaceDto {
+    if (!('name' in value) || value['name'] === undefined) return false;
+    return true;
+}
+
+export function UpdateSpaceDtoFromJSON(json: any): UpdateSpaceDto {
+    return UpdateSpaceDtoFromJSONTyped(json, false);
+}
+
+export function UpdateSpaceDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdateSpaceDto {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+        'description': json['description'] == null ? undefined : json['description'],
+    };
+}
+
+export function UpdateSpaceDtoToJSON(json: any): UpdateSpaceDto {
+    return UpdateSpaceDtoToJSONTyped(json, false);
+}
+
+export function UpdateSpaceDtoToJSONTyped(value?: UpdateSpaceDto | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+        'description': value['description'],
+    };
+}
+
